--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="css/parentssaying.css">
     <link rel="stylesheet" href="css/cta.css">
     <link rel="stylesheet" href="css/footer.css">
+    <link rel="stylesheet" href="animation.css">
     <link rel="stylesheet" href="css/media.css">
 
 
