--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
         <h1>With ClueLearn Parents Learn To
         </h1>
         <h2>To care, Love, Understand & Engage with their kids Better</h2>
-        <p>And This Is Why We Are ClueLearn! By The Way Did You Get What Exactly Does CLUE Of ClueLearn Stand For? <br> Let Us Give You A Clue. Combine First Letter Of All The Sentences Above. Now You Know What ClueLearn Stands For.
+        <p class="pp">And This Is Why We Are ClueLearn! By The Way Did You Get What Exactly Does CLUE Of ClueLearn Stand For? <br> Let Us Give You A Clue. Combine First Letter Of All The Sentences Above. Now You Know What ClueLearn Stands For.
         </p>
         <img src="res/parents.png" alt="">
     </div>
@@ -312,14 +312,14 @@
     </section>
     <section class="cta">
         <h1>Get ClueLearn App</h1>
-        <p>Let's Start This Revolution. And It All Starts With You. It All Starts With The Parents. <br> Kids Will Surely Follow.
+        <p class="pp">Let's Start This Revolution. And It All Starts With You. It All Starts With The Parents. <br> Kids Will Surely Follow.
         </p>
         <button>Download Now</button>
     </section>
     <footer id="contact">
         <div class="fdiv1">
             <img src="footer/footerLogo.png" alt="">
-            <p>ClueLearn is First of its kind Q&A based Parents - Kids Engagement App for Fun yet Effective Learning!
+            <p class="ppp">ClueLearn is First of its kind Q&A based Parents - Kids Engagement App for Fun yet Effective Learning!
             </p>
         </div>
         <div class="fdiv2">
