--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
     <div class="pLearn">
         <h1>With ClueLearn Parents Learn To
         </h1>
-        <h2>To care, Love, Understand & Engage with their kids Better</h2>
+        <h2 class="pp">To care, Love, Understand & Engage with their kids Better</h2>
         <p class="pp">And This Is Why We Are ClueLearn! By The Way Did You Get What Exactly Does CLUE Of ClueLearn Stand For? <br> Let Us Give You A Clue. Combine First Letter Of All The Sentences Above. Now You Know What ClueLearn Stands For.
         </p>
         <img src="res/parents.png" alt="">
