--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         <h1>So To Answer That Question Why We Exist?
         </h1>
         <div class="cardsFirstRow">
-            <div class="card1">
+            <div class="card2">
                 <img src="res/knowledge 1.png" alt="">
                 <h2>
                     we exist to </h2>
@@ -123,27 +123,29 @@
 
             </div>
             <div class="card2">
-                <img src="res/why2.png" alt="">
-                <h2>
-                    we exist to </h2>
-                <p>Empower Parents To Make Their Kids A Better And A Natural Learner For Life.
-                </p>
-            </div>
-        </div>
-        <div class="cardsSecondRow">
-            <div class="card1">
                 <img src="res/why3.png" alt="">
                 <h2>
                     we exist to </h2>
-                <p>Empower Parents To Make Their Kids A Better And A Natural Learner For Life.
+                <p>make parents - kids interactions fun-filled and learning driven.
+
                 </p>
 
+            </div>
+
+        </div>
+        <div class="cardsSecondRow">
+            <div class="card2">
+                <img src="res/why2.png" alt="">
+                <h2>
+                    we exist to </h2>
+                <p>empower parents to know about their kids exact knowledge level directly and without involvement of any one else.
+                </p>
             </div>
             <div class="card2">
                 <img src="res/why4.png" alt="">
                 <h2>
                     we exist to </h2>
-                <p>Empower Parents To Make Their Kids A Better And A Natural Learner For Life.
+                <p>empower parents to achieve all of these very efficiently and effectively.
                 </p>
             </div>
         </div>
