--- a/index.html
+++ b/index.html
@@ -30,21 +30,21 @@
 
     <div class="nav">
         <div class="logo"><img src="res/LogoFav.png" alt=""></div>
-        <nav>
+        <nav id="nav">
             <ul>
-                <li>
+                <li class="li">
                     <a href="#whyWeExist">Why we exist</a>
                 </li>
-                <li>
+                <li class="li">
                     <a href="#parentsPoint">how clue learn works</a>
                 </li>
-                <li>
+                <li class="li">
                     <a href="#appscreen">App screens</a>
                 </li>
-                <li>
+                <li class="li">
                     <a href="">parents speak</a>
                 </li>
-                <li>
+                <li class="li">
                     <a href="">Contact us</a>
                 </li>
 
@@ -343,6 +343,7 @@
     </footer>
 
     <script src="js/jquery/script.js"></script>
+    <script src="css/app.js"></script>
 </body>
 
 </html>
