--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
     </footer>
 
     <script src="js/jquery/script.js"></script>
-    <script src="css/app.js"></script>
+    <script src="app.js"></script>
 </body>
 
 </html>
