--- a/index.html
+++ b/index.html
@@ -36,16 +36,16 @@
                     <a href="#whyWeExist">Why we exist</a>
                 </li>
                 <li class="li">
-                    <a href="#parentsPoint">how clue learn works</a>
+                    <a href="">how clue learn works</a>
                 </li>
                 <li class="li">
                     <a href="#appscreen">App screens</a>
                 </li>
                 <li class="li">
-                    <a href="">parents speak</a>
+                    <a href="parentsSaying">parents speak</a>
                 </li>
                 <li class="li">
-                    <a href="">Contact us</a>
+                    <a href="#contact">Contact us</a>
                 </li>
 
             </ul>
@@ -62,7 +62,7 @@
             <p>ClueLearn is First of its kind Q&A based Parents - Kids Engagement App for Fun yet Effective Learning!
             </p>
             <button>
-                <h1>GetClueLearn</h1>
+                <h1>Get ClueLearn</h1>
             </button>
 
 
@@ -281,7 +281,7 @@
         <img src="res/parents.png" alt="">
     </div>
 
-    <section class="parentsSaying">
+    <section id="parentsSaying" class="parentsSaying">
         <h1>What parents are saying</h1>
 
         <div class="parentswrap">
