--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
                     <a href="#whyWeExist">Why we exist</a>
                 </li>
                 <li class="li">
-                    <a href="">how clue learn works</a>
+                    <a href="#parentsPoint">how clue learn works</a>
                 </li>
                 <li class="li">
                     <a href="#appscreen">App screens</a>
                 </li>
                 <li class="li">
-                    <a href="parentsSaying">parents speak</a>
+                    <a href="#parentsSaying">parents speak</a>
                 </li>
                 <li class="li">
                     <a href="#contact">Contact us</a>
