--- a/index.html
+++ b/index.html
@@ -29,7 +29,11 @@
 <body>
 
     <div class="nav">
-        <div class="logo"><img src="res/LogoFav.png" alt=""></div>
+        <div class="logo">
+            <a href="index.html"><img src="res/LogoFav.png" style="
+            width: 133px; 
+        " alt=""></a>
+        </div>
         <nav id="nav">
             <ul>
                 <li class="li">
@@ -287,28 +291,28 @@
         <div class="parentswrap">
             <div class="saydiv">
                 <div class="circle">
-                    <h3>D</h3>
+                    <h3>N</h3>
                 </div>
-                <p>ClueLearn Is First Of Its Kind Q&A Based Parents Kids Engagement App For Fun Yet Effective Learning! I Am Using It And Found It To Be Really Useful For My Kid. You Should Also Try This.
+                <p>This is one really good way to engage with your kid for learning. It gives you some sense of control and contribution to your kids learning.
                 </p>
-                <h2>Deepanshu</h2>
+                <h2>Nalini</h2>
 
             </div>
             <div class="saydiv pm ">
                 <div class="circle">
                     <h3>A</h3>
                 </div>
-                <p>ClueLearn Is First Of Its Kind Q&A Based Parents Kids Engagement App For Fun Yet Effective Learning! I Am Using It And Found It To Be Really Useful For My Kid. You Should Also Try This.
+                <p>I think Parents can play a much bigger role today in their kids learning. ClueLearn only empowers us to do that well. Its efficient and effective
                 </p>
-                <h2>Ayesha</h2>
+                <h2>Alok</h2>
             </div>
             <div class="saydiv">
                 <div class="circle">
-                    <h3>D</h3>
+                    <h3>R</h3>
                 </div>
-                <p>ClueLearn Is First Of Its Kind Q&A Based Parents Kids Engagement App For Fun Yet Effective Learning! I Am Using It And Found It To Be Really Useful For My Kid. You Should Also Try This.
+                <p>With ClueLearn you can help your kid learn from real objects. You just need to take picture of items your kid is already familiar with. They can relate well.
                 </p>
-                <h2>Deepanshu</h2>
+                <h2>Rohit</h2>
             </div>
         </div>
     </section>
@@ -332,13 +336,26 @@
                 <h2>support@ClueLearn.com</h2>
             </div>
             <div class="fdiv4">
-                <a href=""><img src="footer/fb.png" alt=""></a>
-                <a href=""><img src="footer/insta.png" alt=""></a>
+                <a href="https://www.facebook.com/ClueLearn-101056758659095"><img src="footer/fb.png" alt=""></a>
+                <a href="https://www.instagram.com/cluelearneducation/"><img src="footer/insta.png" alt=""></a>
                 <a href=""><img src="footer/linkdin.png" alt=""></a>
-                <a href=""><img src="footer/twit.png" alt=""></a>
+                <a href="https://twitter.com/ClueLearn"><img src="footer/twit.png" alt=""></a>
             </div>
 
         </div>
+        <div class="fdiv2 new ">
+            <h1>Extra Links</h1>
+
+            <div class="fdiv3">
+                <a href="privacy.html">Privacy Policy</a>
+
+            </div>
+            <div class="fdiv4">
+                <a href="terms.html">Terms of use</a>
+            </div>
+
+        </div>
+
 
     </footer>
 
