--- a/index.html
+++ b/index.html
@@ -62,8 +62,9 @@
     </div>
     <div class="hero">
         <div class="hleft">
-            <h1>ClueLearn: Parent-Kid Engagement App for Learning!</h1>
-            <p>ClueLearn is First of its kind Q&A based Parents - Kids Engagement App for Fun yet Effective Learning!
+            <h1>Q&A based Parents - Kids Engagement App for Fun yet Effective Learning Learning!</h1>
+            <p>
+
             </p>
             <button>
                 <h1>Get ClueLearn</h1>
@@ -121,7 +122,7 @@
             <div class="card2">
                 <img src="res/knowledge 1.png" alt="">
                 <h2>
-                    we exist to </h2>
+                    We exist to </h2>
                 <p>Empower Parents To Make Their Kids A Better And A Natural Learner For Life.
                 </p>
 
@@ -129,8 +130,8 @@
             <div class="card2">
                 <img src="res/why3.png" alt="">
                 <h2>
-                    we exist to </h2>
-                <p>make parents - kids interactions fun-filled and learning driven.
+                    We exist to </h2>
+                <p>Make parents - kids interactions fun-filled and learning driven.
 
                 </p>
 
@@ -142,20 +143,20 @@
                 <img src="res/why2.png" alt="">
                 <h2>
                     we exist to </h2>
-                <p>empower parents to know about their kids exact knowledge level directly and without involvement of any one else.
+                <p>Empower parents to know about their kids exact knowledge level directly and without involvement of any one else.
                 </p>
             </div>
             <div class="card2">
                 <img src="res/why4.png" alt="">
                 <h2>
                     we exist to </h2>
-                <p>empower parents to achieve all of these very efficiently and effectively.
+                <p>Empower parents to achieve all of these very efficiently and effectively.
                 </p>
             </div>
         </div>
     </section>
     <div id="parentsPoint" class="parentsPoint">
-        <h1>So How Exactly Does <br> ClueLearn Empower Parents?
+        <h1>how clue learn works
         </h1>
         <div class="three">
             <div class="three1">
@@ -279,7 +280,7 @@
     <div class="pLearn">
         <h1>With ClueLearn Parents Learn To
         </h1>
-        <h2 class="pp">To care, Love, Understand & Engage with their kids Better</h2>
+        <h2 class="pp">To Care, Love, Understand & Engage with their kids Better</h2>
         <p class="pp">And This Is Why We Are ClueLearn! By The Way Did You Get What Exactly Does CLUE Of ClueLearn Stand For? <br> Let Us Give You A Clue. Combine First Letter Of All The Sentences Above. Now You Know What ClueLearn Stands For.
         </p>
         <img src="res/parents.png" alt="">
