--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
     </div>
     <div class="hero">
         <div class="hleft">
-            <h1>Q&A based Parents - Kids Engagement App for Fun yet Effective Learning Learning!</h1>
+            <h1>Q&A based Parents - Kids Engagement App for Fun yet Effective Learning!</h1>
             <p>
-
+                Combining learning and parents blessings for better results!
             </p>
             <button>
                 <h1>Get ClueLearn</h1>
