--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <div class="nav">
         <div class="logo">
-            <a href="index.html"><img src="res/LogoFav.png" style="
+            <a href="index.html"><img src="res/Logofav.png" style="
             width: 133px; 
         " alt=""></a>
         </div>
@@ -40,13 +40,13 @@
                     <a href="#whyWeExist">Why we exist</a>
                 </li>
                 <li class="li">
-                    <a href="#parentsPoint">how clue learn works</a>
+                    <a href="#parentsPoint">How clue learn works</a>
                 </li>
                 <li class="li">
                     <a href="#appscreen">App screens</a>
                 </li>
                 <li class="li">
-                    <a href="#parentsSaying">parents speak</a>
+                    <a href="#parentsSaying">Parents speak</a>
                 </li>
                 <li class="li">
                     <a href="#contact">Contact us</a>
@@ -62,9 +62,11 @@
     </div>
     <div class="hero">
         <div class="hleft">
-            <h1>Q&A based Parents - Kids Engagement App for Fun yet Effective Learning!</h1>
+            <h1>Q&A based Parents - Kids Engagement App for Fun
+                <br> yet Effective Learning!
+            </h1>
             <p>
-                Combining learning and parents blessings for better results!
+                Mixing Kid's Learning Efforts with Parents Blessings for Superior Results
             </p>
             <button>
                 <h1>Get ClueLearn</h1>
@@ -142,35 +144,35 @@
             <div class="card2">
                 <img src="res/why2.png" alt="">
                 <h2>
-                    we exist to </h2>
+                    We exist to </h2>
                 <p>Empower parents to know about their kids exact knowledge level directly and without involvement of any one else.
                 </p>
             </div>
             <div class="card2">
                 <img src="res/why4.png" alt="">
                 <h2>
-                    we exist to </h2>
+                    We exist to </h2>
                 <p>Empower parents to achieve all of these very efficiently and effectively.
                 </p>
             </div>
         </div>
     </section>
     <div id="parentsPoint" class="parentsPoint">
-        <h1>how clue learn works
+        <h1>How clue learn works
         </h1>
         <div class="three">
             <div class="three1">
                 <div class="box">
                     <img src="res/emParents/1.png" alt="">
                 </div>
-                <P>ClueLearn Is First Of Its Kind Q&A Based Parents - Kids Engagement App For Casual Yet Effective Learning!
+                <P>ClueLearn is First of its Kind Q&A Based Parents - Kids Engagement App for Casual Yet Effective Learning!
                 </P>
             </div>
             <div class="three1 m">
                 <div class="box">
                     <img src="res/emParents/2.png" alt="">
                 </div>
-                <P>Parents Can Select & Assign Specially Curated Questions From Range Of Topics For Kids Of All Ages!
+                <P>Parents Can Select & Assign Specially Curated Questions From Range of Topics For Kids of All Ages!
 
                 </P>
             </div>
@@ -266,7 +268,7 @@
             </li>
             <li class="item-a">
                 <div class="slide">
-                    <h2 class="Appheading">Asign All Types Of Questions To Your Kid
+                    <h2 class="Appheading">Asign All Types of Questions To Your Kid
 
                     </h2>
                     <img src="App Screens/app7.png" alt="">
@@ -281,7 +283,7 @@
         <h1>With ClueLearn Parents Learn To
         </h1>
         <h2 class="pp">To Care, Love, Understand & Engage with their kids Better</h2>
-        <p class="pp">And This Is Why We Are ClueLearn! By The Way Did You Get What Exactly Does CLUE Of ClueLearn Stand For? <br> Let Us Give You A Clue. Combine First Letter Of All The Sentences Above. Now You Know What ClueLearn Stands For.
+        <p class="pp">And This is Why We Are ClueLearn! By The Way Did You Get What Exactly Does CLUE of ClueLearn Stand For? <br> Let Us Give You A Clue. Combine First Letter of All The Sentences Above. Now You Know What ClueLearn Stands For.
         </p>
         <img src="res/parents.png" alt="">
     </div>
