--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <div class="nav">
         <div class="logo">
-            <a href="index.html"><img src="res/Logofav.png" style="
+            <a href="index.html"><img src="res/LogoFav.png" style="
             width: 133px; 
         " alt=""></a>
         </div>
