--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                 <img src="res/knowledge 1.png" alt="">
                 <h2>
                     We exist to </h2>
-                <p>Empower Parents To Make Their Kids A Better And A Natural Learner For Life.
+                <p>Empower Parents to Make their Kids a Better and a Natural Learner For Life.
                 </p>
 
             </div>
@@ -133,7 +133,7 @@
                 <img src="res/why3.png" alt="">
                 <h2>
                     We exist to </h2>
-                <p>Make parents - kids interactions fun-filled and learning driven.
+                <p>Make Parents - kids interactions fun-filled and learning driven.
 
                 </p>
 
@@ -145,14 +145,14 @@
                 <img src="res/why2.png" alt="">
                 <h2>
                     We exist to </h2>
-                <p>Empower parents to know about their kids exact knowledge level directly and without involvement of any one else.
+                <p>Empower Parents to know about their kids exact knowledge level directly and without involvement of any one else.
                 </p>
             </div>
             <div class="card2">
                 <img src="res/why4.png" alt="">
                 <h2>
                     We exist to </h2>
-                <p>Empower parents to achieve all of these very efficiently and effectively.
+                <p>Empower Parents to achieve all of these very efficiently and effectively.
                 </p>
             </div>
         </div>
