--- a/index.html
+++ b/index.html
@@ -4,33 +4,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>ClueLearn:- Parents and child Engagement App</title>
+    <link rel="icon" href="res/LogoFav1.png" type="image/gif" sizes="16x16">
+
     <link rel="stylesheet" href="css/hero.css">
 
     <link rel="stylesheet" href="css/whyWeExist.css">
-    <link rel="stylesheet" href="cards.css">
+    <link rel="stylesheet" href="css/cards.css">
     <link rel="stylesheet" href="css/media.css">
-    <link rel="stylesheet" href="css/parentsPoint.css">
+    <link rel="stylesheet" href="css/parentspoint.css">
     <link rel="stylesheet" href="css/appscr.css">
     <link rel="stylesheet" href="css/lightslider.css">
     <link rel="stylesheet" href="css/pLearn.css">
     <link rel="stylesheet" href="css/parentssaying.css">
     <link rel="stylesheet" href="css/cta.css">
     <link rel="stylesheet" href="css/footer.css">
-    <link rel="stylesheet" href="animation.css">
+    <link rel="stylesheet" href="css/animation.css">
     <link rel="stylesheet" href="css/media.css">
 
 
-    <script src="js/jquery/JQuery3.3.1.js"></script>
-    <script src="js/jquery/lightslider.js"></script>
+    <script src="js/jquery-3.5.1.min.js"></script>
+    <script src="js/lightslider.js"></script>
+
+
 
 </head>
 
-<body>
-
+<body class="b">
+    <div class="overlay"></div>
     <div class="nav">
         <div class="logo">
-            <a href="index.html"><img src="res/LogoFav.png" style="
+            <a href="index.html"><img src="res/Logofav.png" style="
             width: 133px; 
         " alt=""></a>
         </div>
@@ -51,6 +55,13 @@
                 <li class="li">
                     <a href="#contact">Contact us</a>
                 </li>
+                <li style="color: white;
+                border: 2px solid white;
+                padding: 2px;" class="li">
+                    <a style="color: white;
+                    padding-left: 2px;
+                    " href="https://cluelearn.com/adminlogin/">Admin Login</a>
+                </li>
 
             </ul>
         </nav>
@@ -68,14 +79,14 @@
             <p>
                 Mixing Kid's Learning Efforts with Parents Blessings for Superior Results
             </p>
-            <button>
-                <h1>Get ClueLearn</h1>
-            </button>
+            <a class="button" target="_blank" href="https://play.google.com/store/apps/details?id=com.cluelearn">
+                <h1 class="h">Get ClueLearn</h1>
+            </a>
 
 
         </div>
         <div class="hright">
-            <img src="res/landing5 1 (1).png" alt="">
+            <img src="res/landing51(1).png" alt="">
         </div>
     </div>
 
@@ -92,7 +103,8 @@
                 <h3>Every kid is different
                 </h3>
                 <div class="shape"></div>
-                <p>Every Kid is different. But who knows this best. Who else. They are Us. They are Parents. As parents we do everything for our kids. We try and do our best for our kids present and their future.
+                <p>Every Kid is different. But who knows this best. Who else. They are Us. They are Parents. As parents
+                    we do everything for our kids. We try and do our best for our kids present and their future.
                 </p>
 
             </div>
@@ -104,7 +116,9 @@
                 <h3>We make them effective learner
                 </h3>
                 <div class="shape"></div>
-                <p>But what exactly we do when it comes to make them a Better Learner. How can we make them more effective learner. How can we prepare them to help them learn anything when they grow up. As Parents we have very important role to play to make
+                <p>But what exactly we do when it comes to make them a Better Learner. How can we make them more
+                    effective learner. How can we prepare them to help them learn anything when they grow up. As Parents
+                    we have very important role to play to make
                     them a Natural Learner for life.
                 </p>
 
@@ -122,7 +136,7 @@
         </h1>
         <div class="cardsFirstRow">
             <div class="card2">
-                <img src="res/knowledge 1.png" alt="">
+                <img src="res/knowledge1.png" alt="">
                 <h2>
                     We exist to </h2>
                 <p>Empower Parents to Make their Kids a Better and a Natural Learner For Life.
@@ -145,7 +159,8 @@
                 <img src="res/why2.png" alt="">
                 <h2>
                     We exist to </h2>
-                <p>Empower Parents to know about their kids exact knowledge level directly and without involvement of any one else.
+                <p>Empower Parents to know about their kids exact knowledge level directly and without involvement of
+                    any one else.
                 </p>
             </div>
             <div class="card2">
@@ -163,14 +178,15 @@
         <div class="three">
             <div class="three1">
                 <div class="box">
-                    <img src="res/emParents/1.png" alt="">
+                    <img src="res/1.png" alt="">
                 </div>
-                <P>ClueLearn is First of its Kind Q&A Based Parents - Kids Engagement App for Casual Yet Effective Learning!
+                <P>ClueLearn is First of its Kind Q&A Based Parents - Kids Engagement App for Casual Yet Effective
+                    Learning!
                 </P>
             </div>
             <div class="three1 m">
                 <div class="box">
-                    <img src="res/emParents/2.png" alt="">
+                    <img src="res/2.png" alt="">
                 </div>
                 <P>Parents Can Select & Assign Specially Curated Questions From Range of Topics For Kids of All Ages!
 
@@ -178,7 +194,7 @@
             </div>
             <div class="three1 mb">
                 <div class="box">
-                    <img src="res/emParents/3.png" alt="">
+                    <img src="res/3.png" alt="">
                 </div>
                 <P>Parents Can Also Create Their Own Image & Text Based Questions For Practical & Fun Learning!
 
@@ -188,14 +204,15 @@
         <div class="two">
             <div class="three1 sm">
                 <div class="box">
-                    <img src="res/emParents/4.png" alt="">
+                    <img src="res/4.png" alt="">
                 </div>
-                <P>Parents Can Maximize Engagement And Learning Outcomes Through Thoughtfully Designed Interfaces & Answer Flow!
+                <P>Parents Can Maximize Engagement And Learning Outcomes Through Thoughtfully Designed Interfaces &
+                    Answer Flow!
                 </P>
             </div>
             <div class="three1 sm2">
                 <div class="box">
-                    <img src="res/emParents/5.png" alt="">
+                    <img src="res/5.png" alt="">
                 </div>
                 <P>Parents Can Assign, Evaluate, Reassign And Track Kids Learning Anytime & Anywhere!
 
@@ -217,7 +234,7 @@
                 <div class="slide">
                     <h2 class="Appheading">Q&A Based Parent - Kid Engagement App For Learning
                     </h2>
-                    <img src="App Screens/apps1.png" alt="">
+                    <img src="AppScreens/apps1.png" alt="">
                 </div>
             </li>
 
@@ -226,7 +243,7 @@
                     <h2 class="Appheading">Choose From All Relevant Subjects And Topics
 
                     </h2>
-                    <img src="App Screens/app2.png" alt="">
+                    <img src="AppScreens/app2.png" alt="">
                 </div>
             </li>
 
@@ -235,7 +252,7 @@
                     <h2 class="Appheading">Help Kid Learn From Images
 
                     </h2>
-                    <img src="App Screens/app3.png" alt="">
+                    <img src="AppScreens/app3.png" alt="">
                 </div>
             </li>
             <li class="item-a">
@@ -243,7 +260,7 @@
                     <h2 class="Appheading">Select From Easy, Medium Or Hard Question
 
                     </h2>
-                    <img src="App Screens/app4.png" alt="">
+                    <img src="AppScreens/app4.png" alt="">
                 </div>
             </li>
 
@@ -252,7 +269,7 @@
                     <h2 class="Appheading">Select From Easy, Medium Or Hard Question
 
                     </h2>
-                    <img src="App Screens/app5.png" alt="">
+                    <img src="AppScreens/app5.png" alt="">
                 </div>
             </li>
 
@@ -261,7 +278,7 @@
                     <h2 class="Appheading">Track Response Status On The Go
 
                     </h2>
-                    <img src="App Screens/app6.png" alt="">
+                    <img src="AppScreens/app6.png" alt="">
                 </div>
             </li>
             <li class="item-a">
@@ -269,7 +286,15 @@
                     <h2 class="Appheading">Asign All Types of Questions To Your Kid
 
                     </h2>
-                    <img src="App Screens/app7.png" alt="">
+                    <img src="AppScreens/app7.png" alt="">
+                </div>
+            </li>
+            <li class="item-a">
+                <div class="slide">
+                    <h2 class="Appheading">Asign or Ask Question
+
+                    </h2>
+                    <img src="AppScreens/App8.png" alt="">
                 </div>
             </li>
 
@@ -281,7 +306,9 @@
         <h1>With ClueLearn Parents Learn To
         </h1>
         <h2 class="pp">To Care, Love, Understand & Engage with their kids Better</h2>
-        <p class="pp">And This is Why We Are ClueLearn! By The Way Did You Get What Exactly Does CLUE of ClueLearn Stand For? <br> Let Us Give You A Clue. Combine First Letter of All The Sentences Above. Now You Know What ClueLearn Stands For.
+        <p class="pp">And This is Why We Are ClueLearn! By The Way Did You Get What Exactly Does CLUE of ClueLearn Stand
+            For? <br> Let Us Give You A Clue. Combine First Letter of All The Sentences Above. Now You Know What
+            ClueLearn Stands For.
         </p>
         <img src="res/parents.png" alt="">
     </div>
@@ -294,7 +321,8 @@
                 <div class="circle">
                     <h3>N</h3>
                 </div>
-                <p>This is one really good way to engage with your kid for learning. It gives you some sense of control and contribution to your kids learning.
+                <p>This is one really good way to engage with your kid for learning. It gives you some sense of control
+                    and contribution to your kids learning.
                 </p>
                 <h2>Nalini</h2>
 
@@ -303,7 +331,8 @@
                 <div class="circle">
                     <h3>A</h3>
                 </div>
-                <p>I think Parents can play a much bigger role today in their kids learning. ClueLearn only empowers us to do that well. Its efficient and effective
+                <p>I think Parents can play a much bigger role today in their kids learning. ClueLearn only empowers us
+                    to do that well. Its efficient and effective
                 </p>
                 <h2>Alok</h2>
             </div>
@@ -311,7 +340,8 @@
                 <div class="circle">
                     <h3>R</h3>
                 </div>
-                <p>With ClueLearn you can help your kid learn from real objects. You just need to take picture of items your kid is already familiar with. They can relate well.
+                <p>With ClueLearn you can help your kid learn from real objects. You just need to take picture of items
+                    your kid is already familiar with. They can relate well.
                 </p>
                 <h2>Rohit</h2>
             </div>
@@ -319,14 +349,18 @@
     </section>
     <section class="cta">
         <h1>Get ClueLearn App</h1>
-        <p class="pp">Let's Start This Revolution. And It All Starts With You. It All Starts With The Parents. <br> Kids Will Surely Follow.
+        <p class="pp">Let's Start This Revolution. And It All Starts With You. It All Starts With The Parents. <br> Kids
+            Will Surely Follow.
         </p>
-        <button>Download Now</button>
+        <a target="_blank" class="button2" href="https://play.google.com/store/apps/details?id=com.cluelearn">
+            <h1>Get ClueLearn</h1>
+        </a>
     </section>
     <footer id="contact">
         <div class="fdiv1">
             <img src="footer/footerLogo.png" alt="">
-            <p class="ppp">ClueLearn is First of its kind Q&A based Parents - Kids Engagement App for Fun yet Effective Learning!
+            <p class="ppp">ClueLearn is First of its kind Q&A based Parents - Kids Engagement App for Fun yet Effective
+                Learning!
             </p>
         </div>
         <div class="fdiv2">
@@ -360,7 +394,7 @@
 
     </footer>
 
-    <script src="js/jquery/script.js"></script>
+    <script src="js/script.js"></script>
     <script src="app.js"></script>
 </body>
 
